# repo-root/groups/group-05-manage-player/manage-player/src/main/java/fr/efreifive/manageplayer/dto/UpdatePlayerStatisticsRequest.java
@@ -7,6 +7,9 @@ public record UpdatePlayerStatisticsRequest(
     @NotNull @Min(0) Integer matchesPlayed,
     @NotNull @Min(0) Integer goalsScored,
     @NotNull @Min(0) Integer assists,
-    @NotNull @Min(0) Integer wins
+    @NotNull @Min(0) Integer wins,
+    @NotNull @Min(0) Integer losses,
+    @NotNull @Min(0) Integer draws,
+    @NotNull @Min(0) Integer mvps
 ) {
 }
